@@ -1,4 +1,4 @@
-/* Copyright (C) 2011-2017 Jerome Fisher, Sergey V. Mikayev
+/* Copyright (C) 2011-2018 Jerome Fisher, Sergey V. Mikayev
  *
  *  This program is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -59,7 +59,7 @@ MainWindow::MainWindow(Master *master, QWidget *parent) :
 	connect(master, SIGNAL(playMidiFiles(const QStringList &)), SLOT(handlePlayMidiFiles(const QStringList &)), Qt::QueuedConnection);
 	connect(master, SIGNAL(convertMidiFiles(const QStringList &)), SLOT(handleConvertMidiFiles(const QStringList &)), Qt::QueuedConnection);
 	connect(master, SIGNAL(mainWindowTitleUpdated(const QString &)), SLOT(setWindowTitle(const QString &)));
-	connect(master, SIGNAL(maxSessionsFinished()), SLOT(close()));
+	connect(master, SIGNAL(maxSessionsFinished()), SLOT(on_actionExit_triggered()));
 
 	if (master->getTrayIcon() != NULL) {
 		connect(master->getTrayIcon(), SIGNAL(activated(QSystemTrayIcon::ActivationReason)), SLOT(handleTrayIconActivated(QSystemTrayIcon::ActivationReason)));
@@ -87,6 +87,17 @@ MainWindow::~MainWindow()
 
 void MainWindow::closeEvent(QCloseEvent *event) {
 	QSettings *settings = Master::getInstance()->getSettings();
+	if (settings->value("Master/hideToTrayOnClose", false).toBool()) {
+		event->ignore();
+		hide();
+	} else {
+		event->accept();
+		on_actionExit_triggered();
+	}
+}
+
+void MainWindow::on_actionExit_triggered() {
+	QSettings *settings = Master::getInstance()->getSettings();
 	settings->setValue("Master/mainWindowGeometry", geometry());
 	if (testMidiDriver != NULL) {
 		delete testMidiDriver;
@@ -104,7 +115,6 @@ void MainWindow::closeEvent(QCloseEvent *event) {
 		delete midiConverterDialog;
 		midiConverterDialog = NULL;
 	}
-	event->accept();
 	QApplication::quit();
 }
 
@@ -120,7 +130,7 @@ void MainWindow::on_actionAbout_triggered()
 		"Build Arch: " BUILD_SYSTEM " " + QString::number(QSysInfo::WordSize) + "-bit\n"
 		"Build Date: " BUILD_DATE "\n"
 		"\n"
-		"Copyright (C) 2011-2017 Jerome Fisher, Sergey V. Mikayev\n"
+		"Copyright (C) 2011-2018 Jerome Fisher, Sergey V. Mikayev\n"
 		"\n"
 		"Licensed under GPL v3 or any later version."
 	);
@@ -209,12 +219,17 @@ void MainWindow::on_actionConvert_MIDI_to_Wave_triggered() {
 
 void MainWindow::on_menuOptions_aboutToShow() {
 	ui->actionStart_iconized->setChecked(master->getSettings()->value("Master/startIconized", false).toBool());
+	ui->actionHide_to_tray_on_close->setChecked(master->getSettings()->value("Master/hideToTrayOnClose", false).toBool());
 	ui->actionShow_LCD_balloons->setChecked(master->getSettings()->value("Master/showLCDBalloons", true).toBool());
 	ui->actionShow_connection_balloons->setChecked(master->getSettings()->value("Master/showConnectionBalloons", true).toBool());
 }
 
 void MainWindow::on_actionStart_iconized_toggled(bool checked) {
 	master->getSettings()->setValue("Master/startIconized", checked);
+}
+
+void MainWindow::on_actionHide_to_tray_on_close_toggled(bool checked) {
+	master->getSettings()->setValue("Master/hideToTrayOnClose", checked);
 }
 
 void MainWindow::on_actionShow_LCD_balloons_toggled(bool checked) {
@@ -255,7 +270,7 @@ void MainWindow::trayIconContextMenu() {
 	a->setCheckable(true);
 	a->setChecked(master->getSettings()->value("Master/showConsole", false).toBool());
 #endif
-	menu->addAction("Exit", this, SLOT(close()));
+	menu->addAction("Exit", this, SLOT(on_actionExit_triggered()));
 	master->getTrayIcon()->setContextMenu(menu);
 }
 
@@ -296,6 +311,7 @@ void MainWindow::handlePlayMidiFiles(const QStringList &fileList) {
 void MainWindow::handleConvertMidiFiles(const QStringList &fileList) {
 	qDebug() << "Converting:" << fileList;
 	on_actionConvert_MIDI_to_Wave_triggered();
+	connect(midiConverterDialog, SIGNAL(batchConversionFinished()), SLOT(on_actionExit_triggered()));
 	midiConverterDialog->startConversion(fileList);
 }
 
