@@ -42,6 +42,7 @@ private:
 	void trayIconContextMenu();
 
 private slots:
+	void on_actionExit_triggered();
 	void on_actionAbout_triggered();
 	void handleSynthRouteAdded(SynthRoute *synthRoute, const AudioDevice *audioDevice);
 	void handleSynthRouteRemoved(SynthRoute *synthRoute);
@@ -53,6 +54,7 @@ private slots:
 	void on_actionConvert_MIDI_to_Wave_triggered();
 	void on_menuOptions_aboutToShow();
 	void on_actionStart_iconized_toggled(bool checked);
+	void on_actionHide_to_tray_on_close_toggled(bool checked);
 	void on_actionShow_LCD_balloons_toggled(bool checked);
 	void on_actionShow_connection_balloons_toggled(bool checked);
 	void on_actionROM_Configuration_triggered();
